Thu Oct 16 16:08:40 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c: make it works

Thu Oct 16 13:26:27 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/convert_tds2sql.c src/odbc/odbc.c:
	* src/odbc/odbc_util.c:
	- move column_text_sqlgetdatapos logic to odbc_tds2sql

Wed Oct 15 16:51:05 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/utf8_2.c: error message more verbose

Mon Oct 06 15:43:03 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/.cvsignore src/odbc/unittests/Makefile.am:
	* src/tds/iconv.c src/odbc/unittests/utf8_2.c(added):
	- fixed string truncation with charset with shift state

Thu Oct 01 10:06:13 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/basename.c src/replacements/gettimeofday.c:
	- remove wrong comments

Thu Sep 25 10:05:40 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c:
	- rollback changes, our version, was correct

Fri Sep 19 15:37:40 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/Makefile.am: fix compile

Thu Sep 18 10:50:48 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/convert_tds2sql.c src/odbc/odbc.c:
	* src/odbc/odbc_util.c:
	- more error set in odbc_tds2sql

Thu Sep 18 10:17:49 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: reduce use of #if

Wed Sep 17 13:25:51 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: typo error

Wed Sep 17 14:14:15 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/.cvsignore src/tds/Makefile.am src/tds/convert.c:
	* src/tds/data.c src/tds/read.c src/tds/types.pl(added):
	- autogenerate some functions based on types.txt

Sun Sep 14 09:44:55 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/odbc/odbc.c src/tds/mem.c src/tds/token.c: