@@ -1,3 +1,6 @@
+Thu Oct 16 16:09:45 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/prepare_query.c: small optimization
+
 Thu Oct 16 16:08:40 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/odbc/unittests/blob1.c: make it works
 
@@ -696,4 +699,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2620 2008-10-16 14:08:43 freddy77 Exp $
+$Id: ChangeLog,v 1.2621 2008-10-16 14:09:57 freddy77 Exp $
